--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "framer-motion": "^5.5.5",
     "graphql": "^16.2.0",
     "next": "^12.3.0",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "next dev"
